--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@ title: home
 
 <img src="images/portrait.jpg" class="portrait"/>
 <header class="content_tit">
-<h3>DeepDECS</h3>
+<h3>Welcome</h3>
 </header>
 
-<!-- Brief description of problem -->
 <p>
-	With 
+	I am Lecturer in Computer Science at the University of York working within the <a href="https://www.york.ac.uk/safe-autonomy/" target="_blank">Institute for Safe Autonomy</a>. I have a wide range of research interests but I am particularly interested in autonomous systems engineering and how uncertainty impacts the safety of deployed systems.
 </p>
-
-<!-- DeepDECS summary(?) -->
 <p>
-	Test paragraph
+	Having completed a PhD in control systems engineering in collaboration with Jaguar Cars, I moved into industry where I designed and developed bespoke web-based software solutions as well as a product suite for local government focused on governance, risk and compliance. During this period I also provided consultancy services for the management and delivery of software projects.</p>
+<p>
+	I returned to academia in 2014 and undertook a <a href="https://www.gov.uk/government/organisations/defence-science-and-technology-laboratory" target ="_blank">DSTL</a> funded PhD which considered the formal verification of socio-technical systems in which human behaviour introduces variation and flexibility in published workflows. I work with stochastic models, in particular Markov chains, which may be analysed with probabilistic verification tools such as <a href="http://www.prismmodelchecker.org" target ="_blank">PRISM</a>.
 </p>
-
+<p>
+	Having completed my PhD I worked on a second <a href="https://www.gov.uk/government/organisations/defence-science-and-technology-laboratory" target ="_blank">DSTL</a> funded project which considered how Natural Language Processing could be integrated with probabilisitc models to improve the accuracy of decision centered tasks where information regarding the operational environment is encoded in unstructured forms.
+</p>
+<p>
+	As a postdoctoral researcher I have worked as part of the <a href="what is autonomy and independence" target="_blank">Assuring Autonomy International Programme at York</a> where I developed guidance for the assurance of machine learnt components for use in safety critical systems.
+	</p>
