--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script type="text/javascript"
+  src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
@@ -17,8 +23,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">DeepDECS: Quantifying Perception's Uncertainty for Controller Synthesis </h1>
+<header class="w3-container w3-blue w3-center" style="padding:32px 16px">
+  <h1 class="w3-margin w3-jumbo">DeepDECS</h1>
+  <h1 class="w3-margin w3-xxlarge">Quantifying Perception's Uncertainty</h1>
+  <h1 class="w3-margin w3-xxlarge">for Controller Synthesis </h1>
   <!-- <p class="w3-xlarge">Template by w3.css</p> -->
   <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
 </header>
@@ -28,13 +36,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>DeepDECS</h1>
-      <h5 class="w3-padding-32">Heading test?</h5>
+      <h5 class="w3-padding-32">Framework for safer controllers</h5>
 
-      <p class="w3-text-grey">DeepDECS purpose</p>
+      <p class="w3-text-grey">Autonomous systems have been utilising deep neural networks (DNNs) to perceive the world around them. However, no DNN is ever perfect, which can be devastating in safety-critical applications. DeepDECS is a developed solution able to capture the uncertainty of DNN perception components through the use of robustness verification methods From this DeepDECS produces safe autonomous system controllers for such applications.</p>
+
+      <p class="w3-text-grey">The diagram on the right is the DeepDECS framework, and as can be seen DeepDECS requires four components from the user. First a discrete time Markov Chain (DTMC) of the application the autonomous system is to operate within, and second a requirements file defined via probabilistic computation tree logic (PCTL) notation. It is important to note that the DTMC provided will assume that the perception of the system is perfect. Lastly a pre trained perception DNN to be utilised in the autonomous system, and along an accompanying representative test dataset. These last two components are utilised, along with $n$ verification methods, in step 1 of DeepDECS to derive a set of $2^{n}$ confusion matrices. The accuracy derived from the confusion matrices will be the probabilities for our generated augmented DTMC, step 2 of DeepDECS. Our augmented model now contains an accurate representation of the imperfect perception unit. Step 3 of DeepDECS is controller synthesis, achieved via formal methods with the augmented DTMC and PCTL requirements.</p>
     </div>
 
-    <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+    <div class="w3-third w3-padding-small w3-center">
+      <!-- <i class="fa images/DeepDECS-approach.pdf w3-padding-64 w3-text-red"></i> -->
+      <embed src="images/DeepDECS-approach.png" width="708px" height="345px" />
     </div>
   </div>
 </div>
@@ -47,7 +58,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-twothird">
-      <h1>Tool</h1>
+      <h1>Augment Tool</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
 
       <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
