--- a/index.html
+++ b/index.html
@@ -18,6 +18,57 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
+div.pad-left {
+  width: 30%;
+  padding-left: 0px;
+  padding-right: 0px;
+  float:  left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+div.text-middle {
+  width: 40%;
+  padding-left: 20px;
+  padding-right: 20px;
+  float:  left;
+}
+div.text-left {
+  width: 60%;
+  padding-left: 350px;
+  padding-right: 20px;
+  float:  left;
+}
+div.button-centre
+{
+  float:  left;
+  align-items: center;
+  justify-content: center;
+  display:  flex;
+}
+div.image-centre
+{
+  width: 30%;
+  padding-left: 20px;
+  padding-right: 50px;
+  align-items: center;
+  justify-content: center;
+  display:  flex;
+}
+div.push-right
+{
+  padding-right: 20px;
+}
+div.row
+{
+  display: flex;
+}
+div.col {
+  flex: 1; /* additionally, equal width */
+  
+  padding: 1em;
+  border: solid;
+}
 </style>
 </head>
 <body>
@@ -25,72 +76,81 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:32px 16px">
   <h1 class="w3-margin w3-jumbo">DeepDECS</h1>
-  <h1 class="w3-margin w3-xxlarge">Quantifying Perception's Uncertainty</h1>
-  <h1 class="w3-margin w3-xxlarge">for Controller Synthesis </h1>
+  <h1 class="w3-xxlarge">Capturing Perception's Uncertainty</h1>
+  <h1 class="w3-xxlarge">for Controller Synthesis </h1>
+  <h1 class="w3-margin w3-large">Radu Calinescu, Calum Imrie, Ravi Mangal, Genaína Nunes Rodrigues,Corina P ̆as ̆areanu, Misael Alpizar Santana, and Gricel Vázquez</h1>
   <!-- <p class="w3-xlarge">Template by w3.css</p> -->
   <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
 </header>
 
 <!-- Grid 1: DeepDECS -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
+<div class="w3-row-padding w3-padding-32 w3-container">
+  <div class="row">
+    <div class="text-left">
       <h1>DeepDECS</h1>
-      <h5 class="w3-padding-32">Framework for safer controllers</h5>
+      <h5 class="w3-padding-4">Framework for safer controllers</h5>
 
       <p class="w3-text-grey">Autonomous systems have been utilising deep neural networks (DNNs) to perceive the world around them. However, no DNN is ever perfect, which can be devastating in safety-critical applications. DeepDECS is a developed solution able to capture the uncertainty of DNN perception components through the use of robustness verification methods From this DeepDECS produces safe autonomous system controllers for such applications.</p>
 
       <p class="w3-text-grey">The diagram on the right is the DeepDECS framework, and as can be seen DeepDECS requires four components from the user. First a discrete time Markov Chain (DTMC) of the application the autonomous system is to operate within, and second a requirements file defined via probabilistic computation tree logic (PCTL) notation. It is important to note that the DTMC provided will assume that the perception of the system is perfect. Lastly a pre trained perception DNN to be utilised in the autonomous system, and along an accompanying representative test dataset. These last two components are utilised, along with $n$ verification methods, in step 1 of DeepDECS to derive a set of $2^{n}$ confusion matrices. The accuracy derived from the confusion matrices will be the probabilities for our generated augmented DTMC, step 2 of DeepDECS. Our augmented model now contains an accurate representation of the imperfect perception unit. Step 3 of DeepDECS is controller synthesis, achieved via formal methods with the augmented DTMC and PCTL requirements.</p>
     </div>
 
-    <div class="w3-third w3-padding-small w3-center">
+    <div class="w3-padding-small w3-center image-centre">
       <!-- <i class="fa images/DeepDECS-approach.pdf w3-padding-64 w3-text-red"></i> -->
-      <embed src="images/DeepDECS-approach.png" width="708px" height="345px" />
+      <!-- <embed src="images/DeepDECS-approach.png" width="708px" height="345px" /> -->
+      <embed src="images/DeepDECS-approach.png" width="566px" height="276px" />
     </div>
   </div>
 </div>
 
 <!-- Grid 2: Augment tool -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+<div class="w3-light-grey w3-padding-32 w3-container">
+  <div style="width: 100%">
+
+    <div class="pad-left">
+      <embed src="images/generic-pDTMC.pdf" width="500" height="375" type="application/pdf"/>
+      <big><big><big><big><big><big><big><big><big><big><big><big>
+        <span>&#10509;</span>
+      </big></big></big></big></big></big></big></big></big></big></big></big>
     </div>
 
-    <div class="w3-twothird">
+    <div class="text-middle">
       <h1>Augment Tool</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h5 class="w3-padding-4">Incorporating uncertainty</h5>
+      <p class="w3-text-grey">An augmentation tool was created to generate the parametric DTMC (pDTMC) from the perfect perception pDTMC and the confusion matrices generated from step 1 of DeepDECS. For the tool to work it needs to follow the structure displayed on the left, and it will output the structure on the right. The tool along with more details can be found <a href="https://github.com/ccimrie/DeepDECS" target="_blank">here</a>.</p>
     </div>
+
+    <div class="pad-left"> 
+      <big><big><big><big><big><big><big><big><big><big><big><big>
+        <span>&#10509;</span>
+      </big></big></big></big></big></big></big></big></big></big></big></big> 
+      <embed src="images/generic-pDTMC-with-DNN-perception.pdf" width="500" height="375" type="application/pdf"/>
+    </div>
+
   </div>
+</div>
+
 
 <!-- Grid 3: Tutorial -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+<div class="w3-row-padding w3-padding-32 w3-container">
+  <div class="row">
+    <div class="text-left">
+      <h1>DeepDECS Tutorial</h1>
+      <h5 class="w3-padding-4">How fast to drive on <i>potential</i> ice?</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      <p class="w3-text-grey">Say you have a autonomous car driving down a road and the car is equipped with a perception unit (a DNN). The aim of the perception unit is to determine if the next segment of road is icy or not. Having this information is invaluable as the car should not drive fast on icy roads, but the perception unit is not perfect so how do we best ascertain a safety critical controller? To demonstrate DeepDECS you can download the tutorial from the right which uses the above as a toy example.</p>
     </div>
+    <div class="w3-center button-centre">
+      <form method="get" action="tutorial/DeepDecs_tutorial.pdf">
+        <button type="submit" class="w3-button w3-black w3-xlarge">Download Tutorial</button>
+      </form>
     </div>
   </div>
 </div>
 
 <!-- Grid 4: Case Studies -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+<!-- <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
-    </div>
-
     <div class="w3-twothird">
       <h1>Lorem Ipsum</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
@@ -99,7 +159,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-  </div>
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+  </div> -->
 
 <!-- <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
