--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@ div.text-left {
   padding-right: 20px;
   float:  left;
 }
+div.text-right {
+  width: 70%;
+  padding-left: 150px;
+  padding-right: 0px;
+  float:  left;
+}
 div.button-centre
 {
   float:  left;
@@ -51,6 +57,15 @@ div.image-centre
   width: 30%;
   padding-left: 20px;
   padding-right: 50px;
+  align-items: center;
+  justify-content: center;
+  display:  flex;
+}
+div.image-left
+{
+  width: 30%;
+  padding-left: 10px;
+  padding-right: 10px;
   align-items: center;
   justify-content: center;
   display:  flex;
@@ -149,20 +164,24 @@ div.col {
 </div>
 
 <!-- Grid 4: Case Studies -->
-<!-- <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
+<div class="w3-row-padding w3-light-grey w3-padding-32 w3-container">
+  <div class="w3-content row">
+    <div class="image-left w3-center">
+      <div>
+        <video width="563" height="422" controls>
+          <source src="videos/robot_warehouse.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <br/>
+        <embed src="images/SafeSCAD-system.png" width="563" height="377"/>
+      </div>
     </div>
-    <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    <div class="text-right">
+      <h1>Case Studies</h1>
+      <h5 class="w3-padding-32">Mobile robot collision avoidance & Shared autonomy for driving</h5>
+      <p class="w3-text-grey"></p>
     </div>
-  </div> -->
+  </div>
 
 <!-- <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
