--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@ div.centre-div
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:32px 16px">
   <h1 class="w3-margin w3-jumbo">DeepDECS</h1>
-  <h1 class="w3-xxlarge">Capturing Perception's Uncertainty</h1>
-  <h1 class="w3-xxlarge">for Controller Synthesis </h1>
+  <h1 class="w3-xxlarge">Discrete-Event Controller Synthesis</h1>
+  <h1 class="w3-xxlarge"> for Autonomous Systems with</h1>
+  <h1 class="w3-xxlarge"> Deep-Learning Perception Components</h1>
   <h1 class="w3-margin w3-large"><a href="https://www-users.york.ac.uk/~rcc516/" target="_blank">Radu Calinescu</a>, <a href="https://www.cs.york.ac.uk/people/?group=All%20Staff&username=cimrie" target="_blank"> Calum Imrie</a>, <a href=" https://www.andrew.cmu.edu/user/rmangal/" target="_blank">Ravi Mangal</a>, <a href="https://genaina.github.io/" target="_blank">Genaína Nunes Rodrigues</a>, <a href="https://www.andrew.cmu.edu/user/pcorina/" target="_blank">Corina P<span>&#259;</span>s<span>&#259;</span>reanu</a>, Misael Alpizar Santana, and Gricel Vázquez</h1>
   <!-- <p class="w3-xlarge">Template by w3.css</p> -->
   <!-- <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button> -->
@@ -154,7 +155,7 @@ div.centre-div
       <p class="w3-text-grey">Say you have an autonomous car driving down a road and the car is equipped with a perception unit (i.e. a DNN). The aim of the perception unit is to determine if the next segment of road is icy or not. Having this information is invaluable as the car should not drive fast on icy roads, but the perception unit is not perfect so how do we best ascertain a safety critical controller? To demonstrate DeepDECS you can download the tutorial from the right which uses the presented scenario as a toy example.</p>
     </div>
     <div class="w3-center image-centre">
-      <form method="get" action="tutorial/DeepDecs_tutorial.pdf">
+      <form method="get" action="tutorial/DeepDECS_tutorial.pdf">
         <button type="submit" class="w3-button w3-black w3-xlarge">Download Tutorial</button>
       </form>
     </div>
