--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ div.centre-div
 <div class="w3-padding-32 w3-container">
   <div class="row centre-div">
     <div class="text-left">
-      <!-- h1>DeepDECS</h1>
+      <h1>DeepDECS controller synthesis process</h1>
       <h5 class="w3-padding-4">Framework for safer controllers</h5 -->
 
       <p class="w3-text-grey">Many autonomous systems use deep neural networks (DNNs) to perceive the world around them. 
@@ -131,7 +131,7 @@ div.centre-div
              These confusion matrices are then used to estimate the DNN classification/misclassification probabilities  
              for an augmented, DNN-perception DTMC obtained automatically in Stage 2 ('Model augmentation') of DeepDECS. 
              The augmented model contains an accurate representation of the imperfect DNN perception component. 
-             Finally, Stage 3 ('Controller synthesis') of DeepDECS employs probabilisitc model checking techniques
+             Finally, Stage 3 ('Controller synthesis') of DeepDECS employs probabilistic model checking techniques
              to generate the autonomous system controller synthesis.</p>
     </div>
     <div class="w3-center image-centre">
