--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ div.centre-div
   <div class="row centre-div">
     <div class="text-left">
       <h1>DeepDECS controller synthesis process</h1>
-      <h5 class="w3-padding-4">Framework for safer controllers</h5 -->
+      <!-- h5 class="w3-padding-4">Framework for safer controllers</h5 -->
 
       <p class="w3-text-grey">Many autonomous systems use deep neural networks (DNNs) to perceive the world around them. 
              However, no DNN is perfect, which can be devastating in safety-critical applications. 
